# lurk-beta

./: .clippy.toml  .gitignore  .gitmodules  01d18b91b3b58d321444d955afa2768662f54561-L4.json  031d3a608daf66ae0819d9d0b0112a09b86b2a18-L4.json  061b1354d5edddb493731e545226757dc7a45bfe-L4.json  0721f20007e9faaecdded8dee460a7cbe0d7d280-.json  09bcd8a5018418501d49fc3b11e109fa2d6af09d-L4.json  0a4960a846be8d5a6fbaa762eb5353a13fae1374-L4.json  0c0e1849884c8016d1f001cf17e8d692dbe98dbd-L4.json  0e6cc1ce6a7554479dd350ce54211c001837006b-L4.json  1751b93d8b9d22c4860b1183cac6db0967d8f0e8-L4.json  212f295f846e31d752f2ca2e5d81200b651a514c-.json  25426023dfbfc68020a6db99f543a6d2cae69114-L4.json  29ea314f590390d9a27bbcd8125adfabd318dcac-L4.json  2bd16c29eb80ee9aa95d6821b434ae3e84a14036-L4.json  2bd8b8c486a95ea4219a2d455f51bdbd644a130d-.json  2efe6ec44becd5ec4f572ec5ed89f9f10b454a82-L4.json  3ab302f3b668aeb9d1c4f54e54694b17b7651adc-L4.json  3f7f653e6c1313de7495e3aee224ec856a85e765-L4.json  46c6f881e2cc4085571d818043371f80fdbc20a7-L4.json  483a7b8876ee3b05e5cd459e19ea2cbfa6c0a3bb-L4.json  4914affc66dfec396d9d9a645e1d573533aa5830-L4.json  510d7042990844760d97d65c7e6c7ab75f934630-L4.json  51b933266dfd44e6faae6b63d4f0a65fcda3ab30-L4.json  533044767214af7d3c64fe6e8e881824998c6732-L4.json  56f388b033a61da2d772de55c688326c2f024c36-L4.json  57dc325d780a3c65c0bdb590177b2aece54b1c95-L4.json  5b27fcdc6d26834c7d8a72630a2a2f5a007b9663-L4.json  5e3ed4632950d1c7185f5c19f608439ef957a0d5-L4.json  6233a7f12ed667c2235faa2fe5c5966ec9640351-L4.json  6af808640caa7a23bfaae652b1af33470f5e7cb9-L4.json  6c3a3581627b1dc7ef112011ad998e91e4fc66b4-L4.json  71db5fbb3fcadaffd1bacb0ea16e9c4a12a2fc0e-L4.json  73badc6d513fbe3b2718bc1e18cf166de0dad127-L4.json  753bf7167754ca8b6dc399fd604c9f5a1f719d40-L4.json  823f715404cff5db62364a5bd4035b6dfd2e7bdf-.json  86b5844e7136799afe245f46638e049eb0a4b66b-.json  8f8165c42e7f385d1b3f9a42dcb4cbaa6656d7a7-L4.json  925b73a4161cdb9b437fe776f27c39af05619fe8-L4.json  (+155 more)
.cargo/: config
.circleci/: ci-parallel.sh  config.yml
.config/: nextest.toml
.github/: CODEOWNERS  PERF_REGRESSION.md  dependabot.yml  tables.toml
benches/: analysis.md  bench.env  circuit_generation.rs  end2end.rs  end2end_lem.rs  eval.rs  fibonacci.rs  fibonacci_lem.rs  fibonacci_old.rs  hydration.rs  justfile  prove.rs  public_params.rs  sha256.rs  sha256_ivc.rs  sha256_lem.rs  store.rs  synthesis.rs  synthesis_lem.rs  trie_nivc.rs
chain-server/: Cargo.toml  README.md  build.rs  chain-server.proto
chain-server/proto/: chain-server.proto
chain-server/src/: client.rs  lib.rs  server.rs
clutch/: Cargo.toml  README.md
clutch/demo/: alpha.lurk  bank.lurk  chained-functional-commitment.lurk  functional-commitment.lurk  simple.lurk  vdf.lurk
clutch/src/: lib.rs  main.rs
clutch/tests/: clutch-smoke-test.rs
demo/: bank.lurk  chained-functional-commitment.lurk  functional-commitment.lurk  protocol.lurk  simple.lurk  vdf.lurk
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
examples/: #sha256.rs#  circom.rs  circom_sha256.rs  fibonacci.rs  fibonacci_grumpkin.rs  itcalc.rs  keccak.rs  lurk.rs  one_iteration.rs  one_iteration_with.rs  repl.rs  sha256.rs  sha256_ivc.rs  sha256_ivc_lem.rs  sha256_nivc.rs  sha256_nivc_lem.rs  sha256_serde.rs  sha256_tracing.rs  sha256x.rs  tp_table.rs  validate_call.rs
fcomm/: .gitignore  Cargo.toml  README.md
fcomm/examples/: .gitignore  Makefile  chained-commitment.json  chained-function.json  chained-open-request.json  chained-open-request2.json  chained-request.json  comm.json  fcomm  fibonacci-10-proof.json  fibonacci-claim.json  fibonacci-commitment.json  fibonacci-proof.json  fibonacci.json  fibonacci.lurk  filter-set-commitment.json  filter-set-input.lurk  filter-set-opening.json  filter-set.json  filter-set.lurk  function-commitment.json  function-open-request.json  function-opening-proof.json  function.json  num-list-commitment.json  num-list-function.json  num-list-input.lurk  num-list-opening.json
fcomm/src/: error.rs  file_map.rs  ipfs.rs  lib.rs
fcomm/src/snapshots/: fcomm__test__snapshot_serialized_expressions-2.snap  fcomm__test__snapshot_serialized_expressions-3.snap  fcomm__test__snapshot_serialized_expressions-4.snap  fcomm__test__snapshot_serialized_expressions-5.snap  fcomm__test__snapshot_serialized_expressions.snap
fcomm/tests/: makefile_tests.rs  proof_tests.rs
fcomm/tests/data/: commitment.json  expression.lurk  function.json  opening-proof.json  proof.json
foil/: Cargo.toml
foil/src/: circuit.rs  coil.rs  congruence.rs  constructors.rs  lib.rs
krivine/: Cargo.toml
krivine/src/: expr.rs  lib.rs  parse.rs  ptr.rs  store.rs  syntax.rs  tag.rs
ldon/: Cargo.toml  README.md  rustfmt.toml
ldon/src/: cont.rs  expr.rs  hash.rs  lib.rs  macros.rs  parser.rs  ptr.rs  serde_f.rs  store.rs  syntax.rs
ldon/src/parser/: base.rs  error.rs  position.rs  string.rs  syntax.rs
lurk-derive/: Cargo.toml
lurk-derive/src/: lib.rs
lurk-macros/: Cargo.toml
lurk-macros/src/: generic_tests.rs  lib.rs
lurk-macros/tests/: lurk_macro_test.rs
lurk-metrics/: Cargo.toml
lurk-metrics/src/: data.rs  lib.rs  recorder.rs
lurk-verify/: Cargo.toml
lurk-verify/src/: error.rs  lib.rs  main.rs
lurk_ff/: Cargo.toml  rustfmt.toml
lurk_ff/src/: field.rs  lib.rs  tag.rs
lurk_macro/: Cargo.toml
lurk_macro/src/: lib.rs
lurk_macro/tests/: macro_test.rs
notes/: lurk-spec.md  reduction-notes.md  soundness-notes.md
params/: v28-fil-inner-product-v1.srs
proptest-regressions/: light_store.txt
spec/: eval.md  main.tex  reduction-notes.md  refs.bib  soundness-notes.md
src/: #circuit.rs#  #hash_witness.rs#  .#eval.rs  cache_map.rs  case.rs  circuit.rs  config.rs  constraints.rs  cont.rs  coprocessor.rs  data.rs  dual_channel.rs  error.rs  eval.rs  expr.rs  fib.rs  field.rs  hash.rs  hash_witness.rs  ipfs.rs  ipld.rs  lang.rs  lib.rs  light_data.rs  light_store.rs  logging.rs  lurk_sym.rs  main.rs  num.rs  package.rs  parser.rs  pointer.rs  pool.rs  proof.rs  ptr.rs  repl.rs  scalar_store.rs  state.rs  (+14 more)
(+4037 files in other folders)
