[package]
name = "lurk"
version = "0.3.1"
description = "Turing-Complete Zero Knowledge"
edition.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
rust-version = "1.79" # allows msrv verify to work in CI

[dependencies]
anyhow = { workspace = true }
base32ct = { version = "0.2.0", features = ["std"] }
base-x = "0.2.11"
bellpepper = { workspace = true }
bellpepper-core = { workspace = true }
bincode = { workspace = true }
bytecount = "0.6.7"
camino = { workspace = true, features = ["serde1"] }
clap = { workspace = true, features = ["derive"] }
config = "0.14.0"
dashmap = "6.0.1"
ff = { workspace = true }
fxhash = "0.2.1"
generic-array = "1.0"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = { version = "2.1.0", features = ["rayon", "serde"] }
itertools = "0.13"
lurk-macros = { version = "0.2.0", path = "lurk-macros" }
lurk-metrics = { version = "0.2.0", path = "lurk-metrics" }
neptune = { workspace = true, features = ["arity2", "arity4", "arity8", "arity16", "pasta"] }
match_opt = "0.1.2"
nom = "7.1.3"
nom_locate = "4.1.0"
num-bigint = "0.4.3"
num_cpus = "1.10.1"
num-integer = "0.1.45"
num-traits = "0.2.15"
once_cell = { workspace = true }
pairing = { workspace = true }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
rand = { workspace = true }
rand_core = { version = "0.6.4", default-features = false }
rand_xorshift = "0.3.0"
rayon = "1.7.0"
rustyline-derive = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = { workspace = true }
serde_repr = "0.1.14"
strum = { version = "0.26", features = ["derive"] }
tap = "1.0.1"
stable_deref_trait = "1.2.0"
thiserror = { workspace = true }
abomonation = { workspace = true }
abomonation_derive = { version = "0.1.0", package = "abomonation_derive_ng" }
byteorder = "1.4.3"
circom-scotia = { git = "https://github.com/argumentcomputer/circom-scotia", branch = "main" }
sha2 = { version = "0.10.2" }
reqwest = { version = "0.12.2", features = ["stream", "blocking"] }
ansi_term = "0.12.1"
tracing = { workspace = true }
tracing-texray = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
elsa = { version = "1.9.0", git = "https://github.com/argumentcomputer/elsa", branch = "sync_frozen", features = ["indexmap"] }
arc-swap = "1.6.0"
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
nova = { workspace = true }
[target.'cfg(target_arch = "x86_64")'.dependencies]
nova = { workspace = true, features = ["asm"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pprof = { version = "0.13", optional = true} # only used in tests, under feature "flamegraph"
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = "0.8.5"
rustyline = { version = "14.0", features = [
    "derive",
    "with-file-history",
], default-features = false }
home = "0.5.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
rustyline = { version = "14.0", features = ["derive"], default-features = false }

[dev-dependencies]
assert_cmd = "2.0.12"
cfg-if = "1.0.0"
ascii_table = "4.0.2"
criterion = "0.5"
expect-test = "1.4.1"
hex = "0.4.3"
statrs = "0.17.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tap = "1.0.1"
tempfile = { workspace = true }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[features]
default = []
cuda = ["neptune/cuda", "nova/cuda"]
# compile without ISA extensions
portable = ["nova/portable"]
flamegraph = ["pprof/flamegraph", "pprof/criterion"]

[workspace]
resolver = "2"
members = ["foil", "lurk-macros", "lurk-metrics", "chain-server"]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
abomonation = "0.7.3"
anyhow = "1.0.72"
bellpepper = { git = "https://github.com/argumentcomputer/bellpepper", branch = "dev" }
bellpepper-core = { version = "0.4.0" }
bincode = "1.3.3"
camino = "1.1.6"
clap = "4.3.17"
ff = "0.13"
metrics = "0.23.0"
neptune = { git = "https://github.com/argumentcomputer/neptune", branch = "dev", default-features = false, features = ["abomonation"] }
nova = { git = "https://github.com/argumentcomputer/arecibo", branch = "dev", package = "arecibo", features = ["abomonate"]}
once_cell = "1.18.0"
pairing = { version = "0.23" }
pasta_curves = { version = "0.5.0" }
proptest = "1.2.0"
proptest-derive = "0.5.0"
rand = "0.8"
serde = "1.0"
serde_json = { version = "1.0" }
tempfile = "3.6.0"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-texray = "0.2.0"
tracing-subscriber = "0.3.17"

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Argument Engineering <engineering@argument.xyz>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://argument.xyz"
repository = "https://github.com/argumentcomputer/lurk-beta"
rust-version = "1.79"

[[bin]]
name = "lurk"
path = "src/main.rs"

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
lto = "thin"
incremental = false
codegen-units = 16

[profile.dev-no-assertions]
# Some tests in the case gadget depend on debug assertions
# being off (they test release behavior in case of duplicate clauses).
inherits = "dev-ci"
debug-assertions = false

[[bench]]
name = "end2end"
harness = false

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "synthesis"
harness = false

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "public_params"
harness = false

[[bench]]
name = "trie_nivc"
harness = false
