[package]
name = "chain-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
abomonation = "0.7.3"
anyhow = "1.0.72"
camino = "1.1.6"
clap = "4.3.17"
ff = "0.13"
lurk = { path = "../" }
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }
nova = { git = "https://github.com/lurk-lab/arecibo", branch = "dev", package = "arecibo", features = ["abomonate"]}
once_cell = "1.18.0"
prost = "0.12"
rustyline = "14.0"
serde = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"
