[package]
name = "chain-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
abomonation = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true}
clap = { workspace = true}
ff = { workspace = true }
lurk = { path = "../" }
halo2curves = { version = "0.7.0", features = ["bits", "derive_serde"] }
nova = { workspace = true }
once_cell = {workspace = true }
prost = "0.13"
rustyline = "14.0"
serde = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
