[package]
name = "clutch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lurk supertool"
repository = "https://github.com/lurk-lang/lurk-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
blstrs = "0.6.1"
fcomm = { path = "../fcomm" }
lurk = { path = "../" }
pretty_env_logger = "0.4"
