[package]
name = "clutch"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lurk supertool"
repository = "https://github.com/lurk-lab/lurk-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
blstrs =  { workspace = true }
clap = "4.1.8"
ff = "0.13"
lurk = { path = "../" }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
pretty_env_logger = "0.4"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.8"
