[package]
name = "fcomm"
version = "0.1.1"
authors = ["porcuquine <porcuquine@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Functional commitments with Lurk"
edition = "2021"
repository = "https://github.com/lurk-lab/lurk-rs"

[[bin]]
name = "fcomm"
path = "src/bin/fcomm.rs"

[dependencies]
base64 = { workspace = true }
bellperson = { workspace = true }
blstrs = { workspace = true }
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
ff = { workspace = true }
hex = { version = "0.4.3", features = ["serde"] }
log = { workspace = true }
lurk = { path = "../", package = "lurk" }
once_cell = { workspace = true }
pairing_lib = { workspace = true }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.8"
camino = "1.1.4"
num_cpus = "1.15.0"
predicates = "2.1.5"
tempfile = "3.5.0"
