[package]
name = "fcomm"
version = "0.1.1"
authors = ["porcuquine <porcuquine@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Functional commitments with Lurk"
edition = "2021"
repository = "https://github.com/lurk-lab/lurk-rs"

[[bin]]
name = "fcomm"
path = "src/bin/fcomm.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bellperson = { workspace = true }
bincode = { workspace = true }
blstrs = { workspace = true }
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
ff = { workspace = true }
hex = { version = "0.4.3", features = ["serde"] }
log = { workspace = true }
lurk = { path = "../", package = "lurk" }
lurk-macros = { path = "../lurk-macros" }
once_cell = { workspace = true }
pairing = { workspace = true }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
pretty_env_logger = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.12"
insta = { version = "1.31.0", features = ["json"] }
num_cpus = "1.16.0"
predicates = "2.1.5"
tempfile = { workspace = true }
