[package]
name = "krivine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lurk = { path = "../", package = "lurk" }
ff = { workspace = true }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
nom = "7.1.3"
nom_locate = "4.1.0"
dashmap = "5.4.0"
indexmap = { version = "1.9.2", features = ["rayon"] }
ahash = "0.7.6"
anyhow = { workspace = true }
blstrs = { workspace = true }
im = "15.1.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
