[package]
name = "ldon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nova = { package = "nova-snark", version = "0.9.0", default-features = false }
blstrs = "0.6.0"
pasta_curves = { version = "0.4.0", features = ["repr-c"] }
ff = "0.12.0"
neptune = { version = "8.1.0", features = ["arity2","arity4","arity8","arity16","pasta", "bls"] }
lurk_ff = { path = "../lurk_ff", optional = true }
generic-array = "0.14.4"
once_cell = "1.9.0"
dashmap = "5.0.0"
ahash = "0.7.6"
nom = "7.1.1"
nom_locate = "4.0.0"
im = "15.1.0"
base-x = "0.2.11"
num-bigint = "0.4"
# test-utils dependencies
rand = { version = "0.8", optional = true }
quickcheck = { version = "1.0.3", optional = true }
quickcheck_macros = { version = "1.0.0", optional = true }

[features]
default = ["dep:lurk_ff"]
test-utils = ["lurk_ff?/test-utils", "dep:rand", "dep:quickcheck", "dep:quickcheck_macros"] 

[dev-dependencies]
ldon = { path = ".", features = ["test-utils"] } # enable "test-utils" feature
lurk_ff = { path = "../lurk_ff", features = ["test-utils"] }
rand = { version = "0.8" }
quickcheck = { version = "1.0.3" }
quickcheck_macros = { version = "1.0.0" }

