[package]
name = "lurk-macros"
version = "0.2.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Custom derives for `lurk`"
edition = "2021"
repository = "https://github.com/lurk-lab/lurk-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.43", features = ["derive", "extra-traits", "full"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
anyhow.workspace = true
bincode = { workspace = true }
lurk_crate = { path = "../", package = "lurk" }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
