[package]
name = "lurk-macros"
version = "0.2.0"
description = "Custom derives for `lurk`"
edition.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.50", features = ["derive", "extra-traits", "full"] }

[dev-dependencies]
anyhow.workspace = true
bincode = { workspace = true }
lurk_crate = { path = "../", package = "lurk" }
pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# `cargo udeps` seems unable to detect dev-dependency usage in a proc macro crate
[package.metadata.cargo-udeps.ignore]
development = ["anyhow", "bincode", "lurk_crate", "pasta_curves", "proptest", "proptest-derive", "serde"]
