[package]
name = "lurk-metrics"
authors = ["Lurk Lab <engineering@lurk-lab.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Metrics Sink for lurk"
repository = "https://github.com/lurk-lab/lurk-rs"

[dependencies]
metrics = { workspace = true }
once_cell = { workspace = true }
hdrhistogram = { version = "7.5.2", default-features = false }
tracing = { workspace = true }

[dev-dependencies]
regex = { version = "1.9.4", features = ["unicode-case"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }