[package]
name = "lurk-metrics"
version = "0.2.0"
description = "Metrics Sink for lurk"
edition.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
metrics = { workspace = true }
once_cell = { workspace = true }
hdrhistogram = { version = "7.5.2", default-features = false }
tracing = { workspace = true }

[dev-dependencies]
regex = { version = "1.9.4", features = ["unicode-case"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
