[package]
name = "lurk-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lurk = { path = ".." }
fcomm = { path = "../fcomm" }
serde = { version = "1.0", features = ["derive"] }
pasta_curves = { version = "0.5.2", features = ["repr-c", "serde"], package = "fil_pasta_curves" }
nova = { version = "0.14.0", package = "nova-snark" }
thiserror = "1.0.35"
serde_json = { version = "1.0" }
clap = { version = "3.1", features = ["derive"] }
clap-verbosity-flag = "1.0"
hex = { version = "0.4.2", features = ["serde"] }
log = "0.4.14"
pretty_env_logger = "0.4"

[dev-dependencies]
fcomm = { path = "../fcomm" }
tempdir = "0.3.7"
