[package]
name = "lurk_ff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.12.0"
blstrs = "0.5.0"
pasta_curves = { version = "0.4.0", features = ["repr-c"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8"
