[package]
name = "lurk_macro"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Lurk in Rust"
edition = "2018"

[dependencies]
blstrs = "0.4.1"
ff = "0.11.0"
gensym = "0.1.0"
lurk = { path = "../", package = "lurk" }
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }

[lib]
proc-macro = true
